--- a/unlearning/configs/PMC-unlearn-llama3.yaml
+++ b/unlearning/configs/PMC-unlearn-llama3.yaml
@@ -19,14 +19,12 @@ hparams:
   unlearning_loss: "pmc"
   pmc_selection: "rouge_reward"
 
-  lambda_unlearning: 1.25
+  lambda: 1.25
   top_p: 0.95
   temperature: 0.9
   num_samples: 20
   num_epochs: 30
   min_len: 0
-
-  align: False
 
   batch_size: 8
   gradient_accumulation_steps: 2
